// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CircleBadge > respects the inline prop 1`] = `
<div
  class="sc-feUZmu bYFNcn"
/>
`;

exports[`CircleBadge > respects the variant prop 1`] = `
<div
  class="sc-feUZmu lbGpjD"
/>
`;

exports[`CircleBadge > uses the size prop to override the variant prop 1`] = `
<div
  class="sc-feUZmu jmFkGb"
  size="20"
/>
`;
